2005-09-26  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Apply patch from Paolo Borelli to constify the
	UI actions, bug #302557.

2005-09-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2005-07-16  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	Downgrade minimal mozilla version to 1.7 again, was accidentally
        not changed when copying the rest of the configure changes
	from Epiphany.
		
2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	Update gecko configure checks to also detect mozilla trunk
	which is now named 'seamonkey'.

2005-06-19  Mikael Hallendal  <micke@imendio.com>

	* src/dh-gecko-utils.cpp:
	- Improve build against various mozilla-derivates.
	- Patch from Peter.
	- Fixes bug #158456.

2005-06-08  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2005-05-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/dh-gecko-utils.cpp:
	- Use pango API to split font string. Fixes bug #304428.

2005-05-08  Mikael Hallendal  <micke@imendio.com>

	* Release 0.10

2005-05-08  Mikael Hallendal  <micke@imendio.com>

	* contrib/Makefile.am:
	* src/dh-profile.c:
	* src/dh-profile.h:
	* src/test-profile.c:
	- Removed, half cooked code that won't be developed :)

2005-05-06  Mikael Hallendal  <micke@imendio.com>

	* src/dh-gecko-utils.cpp: 
	- Fixed memory leak, bug #302866
	- Patch from Paolo Borelli

2005-04-14  Ray Strode  <rstrode@redhat.com>

	* src/dh-keyword-model.c: (keyword_model_get_iter),
	(keyword_model_get_path):
	- Fixes bug #166013
	- devhelp's keyword_model_get_path function was incorrectly determining
	  the index of the tree model iterator's node in a list

2005-04-06  Christian Persch  <chpe@cvs.gnome.org>

	* src/dh-gecko-utils.cpp:

	Fix for mozilla API change. Fixes bug #172820.
