@@ -1,5 +1,12 @@
 2005-09-26  Richard Hult  <richard@imendio.com>
 
+	* src/dh-html.c: (html_title_cb):
+	* src/dh-window.c: (window_init), (window_location_changed_cb),
+	(window_title_changed_cb): Patch from Tommi Komulainen to use the
+	html title as window title, bug #144452.
+
+2005-09-26  Richard Hult  <richard@imendio.com>
+
 	* src/dh-window.c: Apply patch from Paolo Borelli to constify the
 	UI actions, bug #302557.
 
